# Align-Mamba

./: .gitignore  CLAUDE.md  NMT.py  README.md  SOTA_IMPLEMENTATION_PLAN.md  constants.py  evaluate.py  install_env.sh  pyproject.toml  requirements.txt  research_implementation_plan.md  train.py
align_mamba/: __init__.py  __main__.py  config.py  constants.py  data.py  evaluate.py  model.py  train.py
align_mamba/config/: __init__.py  hardware.py  schema.py  tokens.py
align_mamba/configs/: config.yaml
align_mamba/configs/data/: mqar.yaml
align_mamba/configs/experiment/: 02_mechanism_ablation.yaml  04_d_state_scaling.yaml
align_mamba/configs/model/: _defaults.yaml
align_mamba/configs/training/: default.yaml
align_mamba/data/: __init__.py  collator.py  loaders.py  mqar.py
align_mamba/data/tokenizer/: tokenizer.json
align_mamba/evaluation/: __init__.py  metrics.py
align_mamba/kernels/: __init__.py  loss.py  rmsnorm.py
align_mamba/models/: __init__.py  attention.py  checkpoints.py  components.py  decoder.py  encoder.py  encoder_decoder.py  factory.py  normalization.py  registry.py  segment_utils.py
align_mamba/models/blocks/: __init__.py  memmamba.py  polarized.py  state_expanded.py
align_mamba/scripts/: __init__.py  evaluate.py  train.py
align_mamba/training/: __init__.py  distributed.py  objectives.py  optimization.py  trainer.py
arXiv-2009.09025v2/: paper_consolidated.tex
arXiv-2312.00752v2/: paper_consolidated.tex
arXiv-2403.19887v2/: paper_consolidated.tex
arXiv-2407.05489v1/: paper_consolidated.tex
configs/: capacity_cliff.yaml  config.yaml  main.yaml
configs/experiment/: 01_proof_mqar_cliff.yaml  03_capacity_scaling.yaml
configs/model/: _defaults.yaml  hybrid_small.yaml
configs/training/: default.yaml
data/: __init__.py  dataset.py  subword_tokenizer.py  tokenizer.py  vocab.py
doc_nmt_mamba/: =3.0  evaluate.py  train.py
doc_nmt_mamba/configs/: config.yaml
doc_nmt_mamba/configs/data/: debug.yaml  iwslt14_de_en.yaml  mqar.yaml  opus_books.yaml  opus_books_fast.yaml
doc_nmt_mamba/configs/experiment/: 01_proof_mqar_cliff.yaml  02_mechanism_ablation.yaml  04_d_state_scaling.yaml  _base.yaml  ablation_all_attention.yaml  ablation_hybrid_ratio_16.yaml  ablation_hybrid_ratio_4.yaml  ablation_layer0_only.yaml  ablation_no_cross_attn.yaml  ablation_no_hybrid_layer0.yaml  contrapro_eval.yaml  main_iwslt_baseline.yaml  main_iwslt_hybrid.yaml  main_opus_baseline.yaml  main_opus_hybrid.yaml  mqar_state_sweep.yaml  scaling_base.yaml  scaling_large.yaml  scaling_medium.yaml  scaling_small.yaml
doc_nmt_mamba/configs/model/: _defaults.yaml  base_transformer.yaml  hybrid_base.yaml  hybrid_medium.yaml  large.yaml  small.yaml
doc_nmt_mamba/data/: __init__.py  augmentation.py  collation.py  collator.py  dataset.py  document_dataset.py  mqar.py  tokenization.py
doc_nmt_mamba/evaluation/: __init__.py  alignment.py  analysis.py  contrapro.py  entity_recall.py  length_analysis.py  metrics.py  runner.py  visualization.py
doc_nmt_mamba/kernels/: __init__.py
doc_nmt_mamba/models/: __init__.py  align_mamba.py  attention.py  bimamba.py  cache_utils.py  checkpoint_utils.py  checkpoints.py  encoder_decoder.py  layers.py  modeling_hybrid.py  normalization.py  utils.py
doc_nmt_mamba/scripts/: benchmark.py  benchmark_hardware.py  benchmark_inference.py  build_tokenizer.py  evaluate.py  migrate_checkpoint.py  reproduce_paper.py  train.py
doc_nmt_mamba/tests/: test_data_pipeline.py  test_models.py  test_reproducibility.py  test_synthetic.py  test_verification_checklist.py
doc_nmt_mamba/training/: __init__.py  distributed.py  hardware.py  objectives.py  schedulers.py  trainer.py
experiments/comparison/: comparison_results.json
experiments/comparison_fixed/: comparison_results.json  table1_quality.tex
model/: src_vocab.pth  tgt_vocab.pth
models/: __init__.py  align_mamba.py  attention.py  capacity.py  checkpoints.py  decoder.py  embeddings.py  encoder.py  encoder_decoder.py  normalization.py  utils.py  wrapper.py
papers/: 2409.07146.md  2412.06464.md  2501.00663.md  2502.10297.md  2506.04761.md  2506.11891.md  2507.00449.md  2602.01763.md  2602.11212.md  2602.11958.md  2602.12021.md  ARCHITECTURE_ANALYSIS_2026.md
resources/arXiv-1810.02268v3/: paper_consolidated.tex
resources/arXiv-2403.00818v2/: paper_consolidated.tex
resources/arXiv-2404.08819v3/: paper_consolidated.tex
resources/arXiv-2405.21060v1/: paper_consolidated.tex
scripts/: eval.py  launch.py  train.py
src/align_mamba/: __init__.py  config.py  data.py  evaluation.py  model.py  training.py
tests/: test_sota_features.py
training/: __init__.py  adaptive.py  beam_search.py  enhanced_trainer.py  evaluator.py  hardware.py  label_smoothing.py  lr_scheduler.py  objectives.py  orpo_loss.py  orpo_trainer.py  rdrop.py  trainer.py
(+34 files in other folders)
