[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "align-mamba"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.3,<2.7",
    "numpy>=1.24,<2.3",
    "mamba-ssm>=2.2,<2.4",
    "flash-attn>=2.5,<2.8",
    "triton>=2.1,<3.2",
    "pyyaml>=6.0,<6.1",
    "accelerate>=1.0,<1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
